# llm_multiagent_debate_cachesaver

./: .gitignore  Progress.md  README.md  Todo.md  mmlu_1_1.json  pyproject.toml  requirements.txt
biography/: eval_conversation.py  gen_conversation.py  test_conversation.py
biography/results/: biography_1_1.json  biography_1_2.json  biography_2_1.json  biography_2_2.json  biography_3_2.json
cachesaver/: caching.py  deduplicator.py  model.py  pipelines.py  reordering.py  typedefs.py
cachesaver/models/: openai.py  wrapper.py
clients/: client_strategies.py
experiment/: experiment.py  gpt-5-nano-2025-08-07_Experiment.xlsx  gpt-5-nano-2025-08-07_experiment_1.xlsx  meta-llama-llama-4-scout-17b-16e-instruct_Experiment.xlsx  meta-llama-llama-4-scout-17b-16e-instruct_experiment_2.xlsx  param_optimization.py
experiment/param_optimization_results/: gpt-5-nano-2025-08-07_param_optimization_1.xlsx
experiment/replicated_experiment_results/: gpt-5-nano-2025-08-07_Experiment.xlsx  gpt-5-nano-2025-08-07_experiment_20.xlsx  gpt-5-nano-2025-08-07_experiment_4.xlsx  llama-3.1-8b-instant_experiment_1.xlsx  ~$gpt-5-nano-2025-08-07_experiment_4.xlsx
gsm/: eval_gsm.py  gen_gsm.py  test_gsm.py
gsm/results/: gsm_1_1.json  gsm_1_2.json  gsm_2_1.json  (+2 more)
math/: experiment_results.xlsx  experiment_results_qwen2.5_7b.xlsx  experiment_without_CacheSaver.csv  gen_math.py  math_agents1_rounds1.p  math_agents2_rounds2.p  math_agents2_rounds3.p  math_agents3_rounds2.p  test_gen_math.py
maths/: gen_math.py  test_math.py
mmlu/: eval_mmlu.py  gen_mmlu.py  test_mmlu.py
utils/: utils.py
(+25 files in other folders)
