[project]
name = "llm-multiagent-debate"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "uv",
    "numpy",
    "cachesaver",
    "pandas"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["clients", "math", "biography", "gsm", "mmlu"]

