[project]
name = "llm-multiagent-debate"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "uv",
    "numpy",
    "cachesaver",
    "pandas",
    "scipy",
    "openpyxl",
    "python-dotenv",
    "groq",
    "openai"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["utils", "clients", "math", "biography", "gsm", "mmlu"]

