[project]
name = "llm-multiagent-debate"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "uv",
    "numpy",
    "pandas",
    "scipy",
    "openpyxl",
    "python-dotenv",
    "groq",
    "openai"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cachesaver", "experiment", "utils", "clients", "maths", "biography", "gsm", "mmlu"]

[dependency-groups]
cachesaver = [
    "deepdiff>=9.0.0",
    "diskcache>=5.6.3",
    "nest-asyncio>=1.6.0",
]


